--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">1</a></li>
+                <li><a href="">2</a></li>
+                <li><a href="">3</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="red">
+            <img src="./img-shoes/img-shoes/01.png" alt="Primo paio di scarpe">
+            <p>il nostro modello di punta</p>
+        </section>
+        <section class="green"></section>
+        <section class="yellow"></section>
+    </main>
 </body>
 </html>
