update html and css

--- a/index.html
+++ b/index.html
@@ -7,23 +7,35 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="">1</a></li>
-                <li><a href="">2</a></li>
-                <li><a href="">3</a></li>
-            </ul>
-        </nav>
-    </header>
 
     <main>
-        <section class="red">
-            <img src="./img-shoes/img-shoes/01.png" alt="Primo paio di scarpe">
-            <p>il nostro modello di punta</p>
+        <section class="red" id="sec-1">
+            <nav>
+                <ul>
+                    <li><a href="#sec-1">1</a></li>
+                    <li><a href="#sec-2">2</a></li>
+                    <li><a href="#sec-3">3</a></li>
+                </ul>
+            </nav>
+            <div class="container">
+                <img src="./img-shoes/img-shoes/01.png" alt="Primo paio di scarpe">
+                <p>il nostro modello di punta</p>
+            </div>
         </section>
-        <section class="green"></section>
-        <section class="yellow"></section>
+        <section class="green" id="sec-2">
+
+            <div class="container">
+                <img src="./img-shoes/img-shoes/02.png" alt="Primo paio di scarpe">
+                <p>il nostro modello di tacco</p>
+            </div>
+        </section>
+        <section class="yellow" id="sec-3">
+
+            <div class="container">
+                <img src="./img-shoes/img-shoes/03.png" alt="Primo paio di scarpe">
+                <p>il nostro modello di suola</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
